implement some feature;rearrange code